# font_previewer

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/font_previewer/: MainActivity.kt
bundler/: CMakeLists.txt  FlutterBundler.sln  FlutterBundler.vcxproj  README.md  SUMMARY.md  VS_INSTRUCTIONS.md  app.manifest  build.bat  build_all.bat  build_and_update.bat  build_manual.bat  flutter_bundled.h  generate_resources.ps1  main.cpp  resource.h  resource_extractor.cpp  resource_extractor.h  resources.rc  resources.rc.in  test_bundled_app.bat  updated_generate_resources.ps1
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/models/: font_family.dart
lib/screens/: home_desktop.dart
lib/services/: font_download_service.dart
lib/widgets/: font_picker_dialog.dart  font_preview_container.dart  font_preview_list.dart  font_type_list.dart  set_favorite_dialog.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
